Fixed build.xml for garbog Windows that can't comprehend some MANIFEST.MF for some reason
Added core javadoc (to be completed)