@@ -8,43 +8,35 @@
     <property name="src.dir" location="src"/>
     <property name="build.dir" location="classes"/>
     <property name="lib.dir" location="lib"/>
+    <property name="javadoc.dir" location="docs/doc"/>
     <property name="main.class" value="com.notkamui.javaisyou.app.App"/>
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="*.jar"/>
     </path>
 
-    <componentdef classname="org.dogsplayingpoker.ant.PropertyHelpers.ColorPropertyEvaluator"
-                  name="ant-project"
-                  classpath="${lib.dir}/ant-colorizor.jar"
-    />
-
-    <propertyhelper>
-        <ant-project/>
-    </propertyhelper>
-
     <target name="init">
         <tstamp/>
         <mkdir dir="${build.dir}"/>
+        <mkdir dir="${javadoc.dir}"/>
+        <manifest file="MANIFEST.MF">
+            <attribute name="Main-Class" value="${main.class}"/>
+        </manifest>
     </target>
 
     <target name="compile" depends="init">
         <javac
+                classpathref="classpath"
                 srcdir="${src.dir}"
                 destdir="${build.dir}"
                 includeantruntime="false"
         >
-            <classpath refid="classpath"/>
             <compilerarg line="--enable-preview --release=15"/>
         </javac>
     </target>
 
     <target name="jar" depends="compile">
         <buildnumber/>
-        <jar destfile="${app.name}.jar" basedir="${build.dir}">
-            <manifest>
-                <attribute name="Class-Path" value="${lib.dir}"/>
-                <attribute name="Main-Class" value="${main.class}"/>
-            </manifest>
+        <jar destfile="${app.name}.jar" basedir="${build.dir}" manifest="MANIFEST.MF">
             <zipgroupfileset dir="${lib.dir}"/>
         </jar>
     </target>
@@ -58,13 +50,13 @@
     <target name="full-clean" depends="clean">
         <delete file="${app.name}.jar"/>
         <delete file="build.number"/>
+        <delete file="MANIFEST.MF"/>
     </target>
 
     <target name="build" depends="jar"/>
 
     <target name="input-run-args" unless="args">
-        <input addproperty="args" message="${color:red,bold}Type in the arguments to run the game:${color:cyan,bold}"/>
-        <echo message="${color:reset}"/>
+        <input addproperty="args" message="Type in the arguments to run the game:"/>
     </target>
 
     <target name="run" depends="build, input-run-args">
@@ -72,5 +64,12 @@
             <jvmarg line="--enable-preview"/>
             <arg line="${args}"/>
         </java>
+    </target>
+
+    <target name="javadoc" depends="init">
+        <javadoc sourcepath="${src.dir}" destdir="${javadoc.dir}">
+            <classpath refid="classpath"/>
+            <arg line="--enable-preview --release=15"/>
+        </javadoc>
     </target>
 </project>
